src/styles/css/main.stylesheet.css
/* ... */
.draggable-panel-css .panel-body {
    padding-top: 10px;
}

.draggable-panel-css .panel {
    padding: 0em;
    margin: 0;
    border-radius: 0;
    margin-bottom: 0em;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    max-height: 185px;
    border-radius: 2px;
    overflow: auto;
}

.ui-accordion-header {
    background-color: transparent;
    margin: 0em;
    padding: 0em;
    outline: none;
}

.ui-accordion-header.ui-accordion-header-active.ui-state-active {
    outline: none;
}

.ui-accordion-header.ui-state-hover {
    outline: none;
}

.ui-accordion-header-icon.ui-icon {
    display: none;
}

.accordion {
    width: 90%;
    margin: auto;
    position: relative;
}

/* expansion panel styles - start */
.v-expansion-panel {
    background-color: transparent;
    color: var(--text-panel);
}
.v-expansion-panel--active > .v-expansion-panel-title {
    min-height: 48px;
}
.v-expansion-panel-title__overlay {
    border-radius: 3px;
    outline: none;
    background-color: #ededed;
    font-weight: 400;
}

.v-expansion-panel__shadow {
    box-shadow: none;
}

.v-expansion-panel-title {
    cursor: pointer;
    position: relative;
    margin: 2px 0 0;
    padding: 0 0.5em 0 0.7em;
    font-size: 100%;
    font-weight: 400;
    line-height: 1.3;
}

.v-expansion-panel-text {
    background-color: var(--text-panel);
    color: black;
}
.v-expansion-panel-text__wrapper {
    padding: 0;
}
/* expansion panel styles - ends */

.panelHeader {
    border: none;
    border-radius: 0;
    transition: all 0.2s ease-in-out;
}

.panelHeader:hover {
    border-radius: 3px;
}

.panelHeader:after,
.panelHeader:before {
    content: '';
    height: 8px;
    display: inline-block;
    right: 15px;
    position: absolute;
    border-radius: 5px;
    top: 50%;
    transform: translateY(-50%) rotate(132deg);
    transition: 0.2s ease-out;
    background-color: white;
}

.panelHeader:after {
    transform: translate(260%, -50%) rotate(226deg);
}

.ui-accordion-header-active:before {
    transition: 0.2s ease-out;
    transform-origin: left;
    transform: translate(29%, -40%) rotate(50deg);
    top: 46%;
}

.ui-accordion-header-active:after {
    transform-origin: bottom;
    transform: translate(420%, -50%) rotate(310deg);
    transition: 0.2s ease-out;
    top: 46%;
}

.ui-accordion-header-active:hover {
    background-color: transparent;
}

.ui-accordion .ui-accordion-content {
    border: none;
    padding: 0;
}

.icon {
    position: relative;
    width: 50px;
    margin: 5px;
    display: inline-block;
    text-align: center;
    font-size: 8px;
}

img {
    display: none;
}

div.icon img {
    -webkit-user-drag: none;
    -khtml-user-drag: none;
    -moz-user-drag: none;
    -o-user-drag: none;
    width: 100%;
    display: inline-block;
}

.custom-tooltip-styling {
    box-shadow: none;
    border-radius: 3px;
    font: inherit;
    font-size: 14px;
    font-weight: 100;
}

.icon:hover {
    border-radius: 3px;
}

/*! ce-panel styling  ends */

/** custom scroll  styling starts here  */

.search-results {
    scrollbar-width: thin; /* for firefox */
}

.search-results::-webkit-scrollbar {
    margin-right: 3px;
    width: 6px;
}

/*! custom scroll  styling starts ends here  */

/*! ce-panel styling  ends */

/** tab bar styling starts */

#tabsBar {
    width: 100%;
    /* height: 23.5px; */
    display: block;
    align-items: center;
    z-index: 999;
    position: absolute;
    /* top: 47px; */
}

.embed-tabs {
    background-color: transparent !important;
}

#tabsBar .placeholder {
    justify-content: space-between;
    padding: 1px;
    display: inline-block;
    margin: 2px;
    text-align: center;
    /* min-width: 110px; */
    font-size: 14px;
    transition: all 0.2s ease-in-out;
}

.placeholder::before {
    display: inline-block;
    padding: 2px 5px;
    content: '|';
}

#tabsBar .circuits {
    justify-content: space-between;
    border-radius: 3px;
    padding: 1px;
    display: inline-flex;
    align-items: center;
    margin: 2px;
    text-align: center;
    /* min-width: 110px; */
    font-size: 14px;
    transition: all 0.2s ease-in-out;
}

#tabsBar .circuits > span {
    display: inline-block;
    padding: 2px 5px;
}

.circuitName {
    cursor: pointer;
}

#tabsBar button {
    order: 99; /* could have better solution */
    width: 20px;
    align-items: center;
    display: inline;
    font-size: 20px;
    text-align: center;
    padding-bottom: 5px;
    text-decoration: none;
    outline: none;
    border-radius: 1px;
    transition: all 0.1s ease-in-out;
    border-radius: 4px;
    margin-left: 1px;
}

#tabsBar button:focus {
    outline: none !important;
    box-shadow: none !important;
}
#tabsBar button:active {
    outline: none !important;
    box-shadow: none !important;
}

/*! tab bar styling ends */
/** Module property styling starts here */

.moduleProperty {
    font: inherit;
    width: 250px;
    top: 90px;
    right: 10px;
}

.layoutElementPanel {
    width: 220px;
    font: inherit;
    display: none;
    top: 90px;
    left: 10px;
}

.timing-diagram-panel {
    border-radius: 5px;
    z-index: 70;
    transition: background 0.5s ease-out;
    position: fixed;
    cursor: pointer;
    left: 300px;
    top: 90px;
}

.timing-diagram-panel .panel-header {
    border-radius: 5px;
    border-top-right-radius: 5px;
    padding: 3px;
    font-weight: bold;
    font-size: 16px;
    text-transform: uppercase;
    text-align: left;
    cursor: move;
}

/* Testbench UI Styling begin */

.testbench-manual-panel {
    border-radius: 5px;
    z-index: 100;
    transition: background 0.5s ease-out;
    position: fixed;
    cursor: pointer;
    left: 10px;
    top: 470px;
}

.testbench-manual-panel .panel-header {
    border-radius: 5px;
    border-top-right-radius: 5px;
    padding: 3px;
    font-weight: bold;
    font-size: 16px;
    text-transform: uppercase;
    text-align: left;
    cursor: move;
}
/* ... */

